# dementia_bot

./: .gitignore  README.md  django_models  example_test_for_import.json  sample.json  setup.cfg  test_dementia.txt
.github/workflows/: workflow.yml
bot/: .env.example  Dockerfile  README.md  docker-entrypoint.sh  main.py  pyproject.toml
bot/app/handlers/: cancel_handler.py  handler_constants.py  handlers.py  main_handler.py  question_handler.py  register_handler.py  start_handler.py  test_handler.py
bot/app/handlers/keyboards/: keyboard.py
bot/app/handlers/states/: states.py
bot/app/handlers/test/: callback.py  keyboard.py  states.py  test_result.py
bot/app/handlers/validators/: validator.py
bot/bot/: bot_config.py
bot/core/: config.py
bot/middlewares/: __init__.py  throttling.py
bot/utils/: http_client.py
expert-system/: Dockerfile  README.md  docker-compose.yaml  docker-entrypoint.sh  env.example  pyproject.toml  requirements.txt
expert-system/botapp/: admin.py  constants.py  models.py  serializers.py  urls.py  utils.py  validators.py  views.py
expert-system/botapp/core/: mixins.py
expert-system/botapp/management/commands/: addjson.py
expert-system/botapp/migrations/: 0001_initial.py
expert-system/botapp/services/: answers.py  test_service.py
expert-system/botapp/services/image_neural_handler/: onnx_inference.py
expert-system/data/: questions.json  questions_old.json  qwestions.json
expert-system/expert_system/: settings.py  urls.py
expert-system/nginx/: default.conf
expert-system/test_self/: admin.py  apps.py  models.py  serializers.py  views.py
expert-system/test_self/migrations/: 0001_initial.py  0002_alter_answer_image_answer_alter_answer_ranking_and_more.py  0003_session_remove_answer_unique_pair_session_question_and_more.py
infra/: .env.example  docker-compose.yaml  nginx.conf  postgres-local.yaml
