[tool.poetry]
name = "bot"
version = "0.1.0"
description = "bot"
authors = ["Your Name <you@example.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
aiogram = "^3.0.0"
python-dotenv = "^1.0.0"
pydantic-settings = "^2.0.3"
taskipy = "^1.12.0"
validate-email = "^1.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "python main.py"