[tool.poetry]
name = "expert-system"
version = "0.1.0"
description = ""
authors = ["Вадим Стрига <strigavv@uesnsk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
gunicorn = "^21.2.0"
psycopg2-binary = "^2.9.7"
python-dotenv = "^1.0.0"
taskipy = "^1.12.0"
djangorestframework = "^3.14.0"
drf-yasg = "^1.21.7"
ultralytics = "8.1.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.taskipy.tasks]
start = "gunicorn expert_system.wsgi:application --bind"
makemigrations = "python manage.py makemigrations"
migrate = "python manage.py migrate"
addjson = "python manage.py addjson"
createsuperuser = "python manage.py createsuperuser"
collectstatic = "python manage.py collectstatic --no-input"
